--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       href="https://i.dlpng.com/static/png/1606455-image-with-school-bus-theme-5-eps10-vector-illustration-bus-png-cute-1024_680_preview.png"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer="" src="js/app.js"></script>
+    <script defer="" src="/js/app.js"></script>
   </head>
   <body>
     <aside>
