--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nexbuss</title>
+
     <script
       src="https://kit.fontawesome.com/705438527d.js"
       crossorigin="anonymous"
@@ -45,11 +46,25 @@
       id="font-awesome-5-kit-css"
     />
     <link
-      rel="shortcut icon"
-      href="https://i.dlpng.com/static/png/1606455-image-with-school-bus-theme-5-eps10-vector-illustration-bus-png-cute-1024_680_preview.png"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="icon/apple-touch-icon.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="icon/site.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer="" src="/js/app.js"></script>
+    <script defer="" src="js/app.js"></script>
   </head>
   <body>
     <aside>
@@ -89,7 +104,7 @@
             <td>Stop Name</td>
             <td>Cross Street</td>
             <td>Direction</td>
-            <td>Bus #</td>
+            <td>#</td>
             <td>Next Bus</td>
           </tr>
         </thead>
