--- a/src/index.html
+++ b/src/index.html
@@ -102,82 +102,62 @@
         <thead>
           <tr>
             <td>Stop Name</td>
-            <td>Cross Street</td>
-            <td>Direction</td>
             <td>#</td>
-            <td>Next Bus</td>
+            <td>Direction</td>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="main">
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Rothwell Road</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>02:25 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Commerce Drive</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:23 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>02:27 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:21 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
-            <td>Southbound</td>
-            <td>677</td>
             <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Sterling Lyon Parkway</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>02:38 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Taylor Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:08 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>McGillivray Lindenwood East Access Road</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:28 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lindenwood East Access Road</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>02:21 PM</td>
           </tr>
 
@@ -185,70 +165,52 @@
             <td>Kenaston Boulevard</td>
             <td>Lindenwood East Access Road</td>
             <td>Northbound</td>
-            <td>641</td>
-            <td>01:40 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
-            <td>79</td>
-            <td>01:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
-            <td>78</td>
-            <td>02:15 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
-            <td>66</td>
-            <td>01:45 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>01:43 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
-            <td>Northbound</td>
-            <td>79</td>
             <td>01:58 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Academy Road</td>
-            <td>Northbound</td>
             <td>78</td>
             <td>01:59 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Academy Road</td>
-            <td>Northbound</td>
             <td>66</td>
             <td>02:06 PM</td>
           </tr>
@@ -256,16 +218,12 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
-            <td>Southbound</td>
-            <td>79</td>
             <td>01:41 PM</td>
           </tr>
 
@@ -273,23 +231,17 @@
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
             <td>Southbound</td>
-            <td>78</td>
-            <td>02:15 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
             <td>Southbound</td>
-            <td>66</td>
-            <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>01:43 PM</td>
           </tr>
 
@@ -297,47 +249,35 @@
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
-            <td>79</td>
-            <td>01:57 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
-            <td>78</td>
-            <td>01:59 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
-            <td>66</td>
-            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
-            <td>Southbound</td>
             <td>74</td>
-            <td>02:03 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
-            <td>Southbound</td>
-            <td>79</td>
             <td>01:42 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
-            <td>Southbound</td>
-            <td>78</td>
             <td>02:16 PM</td>
           </tr>
 
@@ -345,22 +285,16 @@
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Southbound</td>
-            <td>66</td>
-            <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Tuxedo Avenue</td>
-            <td>Southbound</td>
             <td>74</td>
             <td>02:03 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Tuxedo Avenue</td>
-            <td>Southbound</td>
             <td>78</td>
             <td>02:16 PM</td>
           </tr>
@@ -369,22 +303,16 @@
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Southbound</td>
-            <td>66</td>
-            <td>01:47 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>01:42 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Tuxedo Avenue</td>
-            <td>Northbound</td>
             <td>78</td>
             <td>01:58 PM</td>
           </tr>
@@ -393,30 +321,22 @@
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Northbound</td>
-            <td>66</td>
-            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Southbound</td>
-            <td>18</td>
             <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Lockston Avenue</td>
-            <td>Southbound</td>
             <td>78</td>
             <td>02:16 PM</td>
           </tr>
@@ -425,23 +345,17 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
-            <td>66</td>
-            <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Southbound</td>
-            <td>18</td>
             <td>01:46 PM</td>
           </tr>
 
@@ -449,23 +363,17 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
-            <td>78</td>
-            <td>02:17 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Southbound</td>
-            <td>66</td>
             <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>01:41 PM</td>
           </tr>
 
@@ -473,30 +381,22 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Northbound</td>
-            <td>78</td>
-            <td>01:57 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
-            <td>Northbound</td>
-            <td>66</td>
             <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Corydon Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Corydon Avenue</td>
-            <td>Southbound</td>
             <td>66</td>
             <td>01:49 PM</td>
           </tr>
@@ -505,14 +405,10 @@
             <td>Kenaston Boulevard</td>
             <td>Corydon Avenue</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>01:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Corydon Avenue</td>
-            <td>Northbound</td>
             <td>66</td>
             <td>02:03 PM</td>
           </tr>
@@ -520,8 +416,6 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>01:40 PM</td>
           </tr>
 
@@ -529,22 +423,16 @@
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Northbound</td>
-            <td>66</td>
-            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Carpathia Road</td>
-            <td>Southbound</td>
             <td>66</td>
             <td>01:49 PM</td>
           </tr>
@@ -552,8 +440,6 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
-            <td>Northbound</td>
-            <td>74</td>
             <td>01:40 PM</td>
           </tr>
 
@@ -561,38 +447,28 @@
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Northbound</td>
-            <td>66</td>
-            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:06 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
-            <td>Southbound</td>
-            <td>66</td>
             <td>01:50 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:06 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
-            <td>Grant Avenue</td>
-            <td>Southbound</td>
             <td>66</td>
             <td>01:51 PM</td>
           </tr>
@@ -601,23 +477,17 @@
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>01:39 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
-            <td>Northbound</td>
-            <td>66</td>
             <td>02:01 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
-            <td>Southbound</td>
-            <td>74</td>
             <td>02:07 PM</td>
           </tr>
 
@@ -625,48 +495,36 @@
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>01:38 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>01:37 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:07 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Southbound</td>
-            <td>74</td>
-            <td>02:08 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>02:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Taylor Avenue</td>
             <td>Northbound</td>
-            <td>74</td>
-            <td>02:40 PM</td>
           </tr>
         </tbody>
       </table>
