--- a/src/index.html
+++ b/src/index.html
@@ -102,62 +102,82 @@
         <thead>
           <tr>
             <td>Stop Name</td>
-            <td>#</td>
+            <td>Cross Street</td>
             <td>Direction</td>
+            <td>#</td>
+            <td>Next Bus</td>
           </tr>
         </thead>
-        <tbody class="main">
+        <tbody>
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Rothwell Road</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>02:25 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Commerce Drive</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:23 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>02:27 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:21 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lowson Crescent</td>
+            <td>Southbound</td>
+            <td>677</td>
             <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Sterling Lyon Parkway</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>02:38 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Taylor Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:08 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>McGillivray Lindenwood East Access Road</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:28 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lindenwood East Access Road</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>02:21 PM</td>
           </tr>
 
@@ -165,52 +185,70 @@
             <td>Kenaston Boulevard</td>
             <td>Lindenwood East Access Road</td>
             <td>Northbound</td>
+            <td>641</td>
+            <td>01:40 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
+            <td>79</td>
+            <td>01:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
+            <td>78</td>
+            <td>02:15 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
             <td>Southbound</td>
+            <td>66</td>
+            <td>01:45 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>01:43 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Academy Road</td>
+            <td>Northbound</td>
+            <td>79</td>
             <td>01:58 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Academy Road</td>
+            <td>Northbound</td>
             <td>78</td>
             <td>01:59 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Academy Road</td>
+            <td>Northbound</td>
             <td>66</td>
             <td>02:06 PM</td>
           </tr>
@@ -218,12 +256,16 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
+            <td>Southbound</td>
+            <td>79</td>
             <td>01:41 PM</td>
           </tr>
 
@@ -231,17 +273,23 @@
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
             <td>Southbound</td>
+            <td>78</td>
+            <td>02:15 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Fulham Avenue</td>
             <td>Southbound</td>
+            <td>66</td>
+            <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>01:43 PM</td>
           </tr>
 
@@ -249,35 +297,47 @@
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
+            <td>79</td>
+            <td>01:57 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
+            <td>78</td>
+            <td>01:59 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Northbound</td>
+            <td>66</td>
+            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
+            <td>Southbound</td>
             <td>74</td>
+            <td>02:03 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
+            <td>Southbound</td>
+            <td>79</td>
             <td>01:42 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
+            <td>Southbound</td>
+            <td>78</td>
             <td>02:16 PM</td>
           </tr>
 
@@ -285,16 +345,22 @@
             <td>Kenaston Boulevard</td>
             <td>Willow Avenue</td>
             <td>Southbound</td>
+            <td>66</td>
+            <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Tuxedo Avenue</td>
+            <td>Southbound</td>
             <td>74</td>
             <td>02:03 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Tuxedo Avenue</td>
+            <td>Southbound</td>
             <td>78</td>
             <td>02:16 PM</td>
           </tr>
@@ -303,16 +369,22 @@
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Southbound</td>
+            <td>66</td>
+            <td>01:47 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>01:42 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Tuxedo Avenue</td>
+            <td>Northbound</td>
             <td>78</td>
             <td>01:58 PM</td>
           </tr>
@@ -321,22 +393,30 @@
             <td>Kenaston Boulevard</td>
             <td>Tuxedo Avenue</td>
             <td>Northbound</td>
+            <td>66</td>
+            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Southbound</td>
+            <td>18</td>
             <td>01:46 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Lockston Avenue</td>
+            <td>Southbound</td>
             <td>78</td>
             <td>02:16 PM</td>
           </tr>
@@ -345,17 +425,23 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
+            <td>66</td>
+            <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Southbound</td>
+            <td>18</td>
             <td>01:46 PM</td>
           </tr>
 
@@ -363,17 +449,23 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Southbound</td>
+            <td>78</td>
+            <td>02:17 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Southbound</td>
+            <td>66</td>
             <td>01:48 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>01:41 PM</td>
           </tr>
 
@@ -381,22 +473,30 @@
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
             <td>Northbound</td>
+            <td>78</td>
+            <td>01:57 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Lockston Avenue</td>
+            <td>Northbound</td>
+            <td>66</td>
             <td>02:04 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Corydon Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Corydon Avenue</td>
+            <td>Southbound</td>
             <td>66</td>
             <td>01:49 PM</td>
           </tr>
@@ -405,10 +505,14 @@
             <td>Kenaston Boulevard</td>
             <td>Corydon Avenue</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>01:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Corydon Avenue</td>
+            <td>Northbound</td>
             <td>66</td>
             <td>02:03 PM</td>
           </tr>
@@ -416,6 +520,8 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>01:40 PM</td>
           </tr>
 
@@ -423,16 +529,22 @@
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Northbound</td>
+            <td>66</td>
+            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:05 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Carpathia Road</td>
+            <td>Southbound</td>
             <td>66</td>
             <td>01:49 PM</td>
           </tr>
@@ -440,6 +552,8 @@
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
+            <td>Northbound</td>
+            <td>74</td>
             <td>01:40 PM</td>
           </tr>
 
@@ -447,28 +561,38 @@
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Northbound</td>
+            <td>66</td>
+            <td>02:02 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:06 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Carpathia Road</td>
+            <td>Southbound</td>
+            <td>66</td>
             <td>01:50 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:06 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
+            <td>Grant Avenue</td>
+            <td>Southbound</td>
             <td>66</td>
             <td>01:51 PM</td>
           </tr>
@@ -477,17 +601,23 @@
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>01:39 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
+            <td>Northbound</td>
+            <td>66</td>
             <td>02:01 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
+            <td>Southbound</td>
+            <td>74</td>
             <td>02:07 PM</td>
           </tr>
 
@@ -495,36 +625,48 @@
             <td>Kenaston Boulevard</td>
             <td>Grant Avenue</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>01:38 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>01:37 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:07 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Southbound</td>
+            <td>74</td>
+            <td>02:08 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Boulton Bay</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>02:41 PM</td>
           </tr>
 
           <tr>
             <td>Kenaston Boulevard</td>
             <td>Taylor Avenue</td>
             <td>Northbound</td>
+            <td>74</td>
+            <td>02:40 PM</td>
           </tr>
         </tbody>
       </table>
